GasStationProject/force-app/main/default/objects/Fuel_details__c/Fuel_details__c.object-meta.xml
<CustomObject>
    <label>Fuel details</label>
    <nameField>
        <displayFormat>fuel-{000}</displayFormat>
        <label>Fuel details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>