GasStationProject/force-app/main/default/objects/Fuel_details__c/fields/Fuel_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Supplied__c</fullName>
    <label>Fuel Supplied</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>