GasStationProject/force-app/main/default/objects/Fuel_details__c/fields/Gas_Station__c.field-meta.xml
<CustomField>
    <fullName>Gas_Station__c</fullName>
    <label>Gas Station</label>
    <referenceTo>Gas_Station__c</referenceTo>
    <relationshipLabel>Fuel details</relationshipLabel>
    <relationshipName>Fuel_details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>