GasStationProject/force-app/main/default/objects/Fuel_details__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Fuel details</relationshipLabel>
    <relationshipName>Fuel_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>